--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ TWITTER_COOKIES= # Account cookies
 
 X_SERVER_URL=
 XAI_API_KEY=
-XAI_MODEL=
+XAI_MODEL= ChatGPT 4o mini
 
 #POST INTERVAL RANDOM MIN-MAX MINUTES
 POST_INTERVAL_MIN=  #90 #Default
